--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicativo para registro de pedidos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "Pedidos",
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "multer": "^1.4.4",
     "pg": "^8.7.3",
